--- a/package.json
+++ b/package.json
@@ -9,53 +9,29 @@
   },
   "license": "MIT",
   "engines": {
-    "node": "10",
-    "yarn": ">= 1.9.4"
+    "node": "18",
+    "pnpm": ">=9.3.0"
   },
-  "browserslist": [
-    "IE >= 10"
-  ],
   "scripts": {
-    "build": "yarn && cross-env NODE_ENV=production webpack",
-    "start": "yarn && cross-env NODE_ENV=development webpack-dev-server"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "highcharts": "6.1.2",
-    "javascript-natural-sort": "0.7.1",
-    "lodash": "4.17.10",
-    "normalize.css": "8.0.0",
-    "parsel-js": "^1.0.1",
-    "webfontloader": "1.6.28"
+    "highcharts": "^11.4.3",
+    "javascript-natural-sort": "^0.7.1",
+    "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
+    "parsel-js": "^1.1.2",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/preset-env": "7.0.0",
-    "@types/webpack": "4.4.11",
-    "autoprefixer": "9.1.5",
-    "babel-loader": "8.0.2",
-    "clean-webpack-plugin": "0.1.19",
-    "cross-env": "^5.2.0",
-    "css-loader": "1.0.0",
-    "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "0.4.2",
-    "postcss": "^8.2.8",
-    "postcss-custom-media": "^8.0.0",
-    "postcss-custom-properties": "^11.0.0",
-    "postcss-hexrgba": "^2.0.1",
-    "postcss-import": "^14.0.0",
-    "postcss-loader": "4.x",
-    "postcss-mixins": "^7.0.3",
-    "prettier": "^2.2.1",
-    "style-loader": "0.23.0",
-    "stylelint": "9.5.0",
-    "stylelint-config-standard": "18.2.0",
-    "stylelint-order": "1.0.0",
-    "stylelint-webpack-plugin": "0.10.5",
-    "terser-webpack-plugin": "^4.x",
-    "ts-node": "7.0.1",
-    "typescript": "3.0.3",
-    "webpack": "4.17.2",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.8"
+    "postcss": "^8.4.38",
+    "sass": "^1.77.4",
+    "vite": "^5.2.0"
+  },
+  "volta": {
+    "node": "18.20.3",
+    "pnpm": "9.3.0"
   }
 }
